2005-04-26  Raja R Harinath  <rharinath@novell.com>

	* rerrors_btest.dll.sources: Remove LateBinding10.vb and
	LateBinding11.vb so that it compiles.

2005-03-08 Satya Sudha K <ksathyasudha@novell.com>
        * Negative runtime test cases for Inheritance
                - Contributed by Sudharsan V <vsudharsan@novell.com>

2005-02-18 Ritvik Mayank <mritvik@novell.com>
	* removed some replicated test cases	

2005-02-17  Manjula GHM  <mmanjula@novell.com>
		* Test cases for Expressions

2005-02-09  Raja R Harinath  <rharinath@novell.com>

	* Makefile: Minor cleanups.

2005-1-7 Manjula GHM  <mmanjula@novell.com>

      *InheritanceC7.vb
      *NameSpaceC5.vb
      *OverrideC12.vb
      *NameSpaceC7.vb
      *OverrideC14.vb
      *NameSpaceC9.vb
      *OverrideC16.vb
      *ScopeC2.vb
      *NameSpaceC10.vb
      *ShadowsC6.vb
      *VariablesC6.vb
      *ShadowsC8.vb
      *InterfaceC10.vb
      *InterfaceC12.vb
      *MustInheritC10.vb
      *InheritanceC6.vb
      *NameSpaceC4.vb
      *OverrideC11.vb
      *NameSpaceC6.vb
      *OverrideC13.vb
      *NameSpaceC8.vb
      *OverrideC15.vb
      *OverrideC17.vb
      *NotInheritableC4.vb
      *ScopeC3.vb
      *VariablesC5.vb
      *ShadowsC7.vb
      *InterfaceC11.vb
      *InterfaceC13.vb
      *MustInheritC9.vb
   
     Above test cases are contributed by Sudharsan <vsudharsan@novell.com>


2004-12-20  Ritvik Mayank  <mritvik@novell.com>
         
        *Makefile :For running the tests under Test directory
        *rerrors_btest.dll.sources  : Contains name of the test case
        *rerrors.dll.sources : Contains dummy.cs
        *dummy.cs : Required by rerrors.dll.sources
 
2004-12-20  Ritvik Mayank  <mritvik@novell.com>
         
        *Test: Created Test Directory and moved all the rerrors tests to Test

2004-12-14  Ritvik Mayank  <mritvik@novell.com>
	
	*AssignmentStatements5.vb: Removed, as it was not a proper runtime test 
	*BoolLiteralTest1.vb: Likewise
	*CharacterLiterals1.vb: Likewise