@@ -8,27 +8,81 @@ AssignmentStatements1.vb
 AssignmentStatements2.vb
 AssignmentStatements3.vb
 AssignmentStatements4.vb
+ConditionalStatements1.vb
+DecimalLiteral1.vb
+DoubleLiteral1.vb
+ExceptionHandling1.vb
+ExpConversionDoubletoByte1.vb
+ExpConversionDoubletoDecimal2.vb
+ExpConversionDoubletoInt1.vb
+ExpConversionSingletoByte1.vb
+ExpConversionSingletoDecimal2.vb
+ExpConversionSingletoDecimal3.vb
+ExpConversionSingletoInt1.vb
+ExpConversionStringtoBool3.vb
+ExpConversionStringtoByte2.vb
+ExpConversionStringtoByte3.vb
+ExpConversionStringtoDate2.vb
+ExpConversionStringtoDecimal2.vb
+ExpConversionStringtoDouble2.vb
+ExpConversionStringtoInt2.vb
+ExpConversionStringtoLong2.vb
+ExpConversionStringtoShort2.vb
+ExpConversionStringtoSingle2.vb
+ImpConversionDecimaltoByte1.vb
+ImpConversionDecimaltoInt1.vb
+ImpConversionDoubletoByte1.vb
+ImpConversionDoubletoDecimal2.vb
+ImpConversionDoubletoDecimal3.vb
+ImpConversionDoubletoInt1.vb
+ImpConversionSingletoByte1.vb
+ImpConversionSingletoDecimal2.vb
+ImpConversionSingletoDecimal3.vb
+ImpConversionSingletoInt1.vb
+ImpConversionStringtoBool3.vb
+ImpConversionStringtoByte2.vb
+ImpConversionStringtoByte3.vb
+ImpConversionStringtoDate2.vb
+ImpConversionStringtoDecimal2.vb
+ImpConversionStringtoDouble2.vb
+ImpConversionStringtoInt2.vb
+ImpConversionStringtoLong2.vb
+ImpConversionStringtoShort2.vb
+ImpConversionStringtoSingle2.vb
 Inheritance1.vb
+Inheritance2.vb
+InheritanceM.vb
+InheritanceN.vb
 IntegerLiteral1.vb
 IntegerLiteralTest1.vb
 IntegerLiteralTest2.vb
 IntegerLiteralTest3.vb
-ShiftOperators1.vb
-StringLiterals1.vb
-InheritanceM.vb
 Interface1.vb
-InheritanceN.vb
-Variables1.vb
-Variables2.vb
+LateBinding10.vb
+LateBinding12.vb
+LateBinding13.vb
+LateBinding14.vb
+LateBinding1.vb
+LateBinding2.vb
+LateBinding3.vb
+LateBinding4.vb
+LateBinding5.vb
+LateBinding6.vb
+LateBinding7.vb
+LateBinding8.vb
+LateBinding9.vb
+LikeOperator1.vb
 LikeOperator2.vb
 LikeOperator3.vb
-LateBinding9.vb
-LateBinding2.vb
-LateBinding4.vb
-LateBinding6.vb
-LateBinding8.vb
-LateBinding1.vb
-LateBinding3.vb
-LateBinding5.vb
-LateBinding7.vb
-
+LiteralNothing1.vb
+LogicalOperators1.vb
+LongLiteral1.vb
+OptionalArgFunction1.vb
+OptionalArgument1.vb
+Override1.vb
+RelationalOperators1.vb
+Scope1.vb
+ShiftOperators1.vb
+StringLiterals1.vb
+Variables1.vb
+Variables2.vb
