@@ -1,4 +1,7 @@
 
+2005-05-03  Ritvik Mayank  <mritvik@novell.com>
+	Made correction in few test cases
+	
 2005-05-02  Ritvik Mayank  <mritvik@novell.com>
 	    Patch submitted by Sudharsan V <vsudharsan@novell.com>
 	
